--- a/calc.yml
+++ b/calc.yml
@@ -5,6 +5,10 @@ services:
         image: swarmgs/calc
         ports:
             - "7000:80"
+        healthcheck:
+            test: curl -f -s -S http://localhost/calc/iseverythingok || exit 1
+            interval: 5s
+            timeout: 5s
         deploy:
             placement:
                 constraints:
